plugins {
    id 'java'
}
//Dependency Management
repositories {
    mavenCentral()
    flatDir{
        dirs ("lib")
    }
    maven {
        url "https://www.hec.usace.army.mil/nexus/repository/maven-public/"
    }
}
sourceCompatibility = '8'
targetCompatibility = '8'

dependencies {
    runtimeOnly 'org.xerial:sqlite-jdbc:3.30.1'
    implementation name: "FIRO_TSEnsembles-1.0.1"
    implementation "org.junit.jupiter:junit-jupiter:5.4.2"
    implementation 'mil.army.usace.hec.wat:wat-hec-maps:v1.1-1.1.0.682-SNAPSHOT@jar'//
    implementation 'mil.army.usace.hec.wat:wat-hec:v1.1-1.1.0.682-20220418.154759-1' //
    implementation 'mil.army.usace.hec.wat:wat-hecnf:v1.1-1.1.0.682-SNAPSHOT@jar'//
    implementation 'mil.army.usace.hec.wat:wat-hecnf-pluginapi:v1.1-1.1.0.682-SNAPSHOT@jar'//
    implementation 'org.jdom:jdom:1.1'
    implementation 'mil.army.usace.hec.wat:wat-rma:v1.1-1.1.0.682-SNAPSHOT@jar'//
    implementation 'mil.army.usace.hec.wat:wat-rmadev:v1.1-1.1.0.682-SNAPSHOT@jar'//
    implementation 'mil.army.usace.hec.wat:wat:v1.1-1.1.0.682-SNAPSHOT@jar'//
    implementation 'mil.army.usace.hec.wat:wat-model:v1.1-1.1.0.682-SNAPSHOT@jar'//
    implementation 'mil.army.usace.hec:javaHeclib:7-HZ-win-x64@zip'
    implementation 'org.apache.commons:commons-lang3:3.11'
}
//Testing
test{
    useJUnitPlatform()
    testLogging{
        test {
            testLogging {
                events "PASSED","FAILED", "SKIPPED"
            }
        }
    }
}
tasks.withType(Test) {
    useJUnitPlatform()
    jvmArgs "--enable-preview"
}

//Publishing
group 'mil.army.usace.hec'
version '1.0-SNAPSHOT'

jar {
    sourceCompatibility = JavaVersion.VERSION_1_8
    targetCompatibility = JavaVersion.VERSION_1_8
    manifest {
        attributes "WatPluginMainClass": "FIRO_WFP_Plugin"
    }
}
